# gift-http

giFT-Http/: .cvsignore  AUTHORS  ChangeLog  DEVELOPERS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac
giFT-Http/m4/: Makefile.am  gift-pkgconfig.m4  gift-prefix.m4
giFT-Http/src/: .cvsignore  Makefile.am  ht_download.c  ht_download.h  ht_hash.c  ht_hash.h  ht_header.c  ht_header.h  ht_http.c  ht_http.h  ht_utils.c  ht_utils.h  md5.c  md5.h
giFT-Http/win32/: http.dsp  http.dsw
